# StaticSiteGenerator

./: .gitignore  clear_logs.sh  main.py  md_test.sh  pyproject.toml  re_test.sh
content/: index.md
docs/: index.html
docs/blog/glorfindel/: index.html
docs/blog/majesty/: index.html
docs/blog/tom/: index.html
docs/contact/: index.html
public/: index.html
public/blog/glorfindel/: index.html
public/blog/majesty/: index.html
public/blog/tom/: index.html
public/contact/: index.html
src/: const.py  leafnode.py  main.py  parentnode.py  split_nodes_delimiter.py  test_htmlnode.py  test_leafnode.py  test_parentnode.py  test_textnode.py  textnode.py
src/functions/: extract_title.py  generate_page.py  markdown_to_blocks.py  markdown_to_html.py  node_to_html.py  regex_extractions.py  split_nodes_delimiter.py  split_nodes_extractions.py
src/functions/conversions/: markdown_to_nodes.py  node_to_html.py  text_to_nodes.py
src/functions/dir_utils/: copy_dirs.py
src/nodes/: htmlnode.py  leafnode.py  parentnode.py  textnode.py
src/tests/: test_extract_title.py  test_extraction.py  test_htmlnode.py  test_leafnode.py  test_markdown_blocks.py  test_markdown_to_html.py  test_markdown_to_text_nodes.py  test_parentnode.py  test_split_nodes.py  test_split_nodes_extraction.py  test_text_to_nodes.py  test_textnode.py
src/utility/: logger.py  node_print.py
