[project]
name = "static-site-generator"
version = "0.1.0"
description = "A static site generator that converts Markdown to HTML"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
ssg = "main:main"
